	  directly bounce.
	* backend/artec_eplus48u.conf: Added support for UMAX AstraSlim
	  1200 SE (from Harq al-Ada <nadaban.bogdan at gmail.com>).
	* doc/descriptions/artec_eplus48u.desc: UMAX AstraSlim
	  1200 SE is supported. Backend is unmaintained.
	* doc/descriptions/unsupported.desc: Added HP ScanJet
	  4850C. Removed UMAX AstraSlim 1200 SE.

2005-10-15  Jochen Eisinger <jochen@penguin-breeder.org>

	* doc/descriptions/mustek_pp.desc: add Medion MD9806 scanner as
	  supported

2005-10-14  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c backend/snapscan-scsi.c
	  backend/snapscan.c backend/snapscan-sources.c:
	  Fixes for 16 bit scan mode from Simon Munton

2005-10-11  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c backend/snapscan-scsi.c
	  backend/snapscan.c backend/snapscan-sources.c:
	  Fixes for Epson 3490/3590 and 16 bit scan mode

2005-10-11  Stephane Voltz <stefdev@modulonet.fr>

	* backend/umax_pp.c: change sane_start semantic to allow for batch
	  scanning

2005-10-08  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/mustek_a3p1.desc: Downgraded status to
	  minimal.
	* doc/descriptions/mustek_usb2.desc: Added "new" marker.

2005-10-06  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added HP ScanJet 3800c.
	* frontend/scanimage.c: Use correct size for fgets. Patch from
	  Antoine Jacoutot <ajacoutot@lphp.org>. 

2005-10-05  Mattias Ellert <mattias.ellert@tsl.uu.se>

	* backend/microtek2.c: Off-by-one error

2005-10-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS acinclude.m4 configure configure.in backend/Makefile.in
	  backend/dll.conf backend/mustek_usb2.c backend/mustek_usb2.h
	  backend/mustek_usb2_asic.c backend/mustek_usb2_asic.h
	  backend/mustek_usb2_high.c backend/mustek_usb2_high.h
	  backend/mustek_usb2_reflective.c backend/mustek_usb2_transparent.c
	  doc/Makefile.in doc/sane-mustek_usb2.man